--- a/app/src/main/res/layout/fragment_mine_order_content.xml
+++ b/app/src/main/res/layout/fragment_mine_order_content.xml
@@ -8,14 +8,9 @@
     <!--android:id="@+id/rv_order"-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent"/>-->
-
-    <TextView
-        android:id="@+id/tv_order"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="da哒哒"
-        android:textColor="@color/tv_name"
-        android:textSize="45sp"/>
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_order"
+        android:layout_width="match_parent"
+        android:background="@color/bg_gray"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
