--- a/app/src/main/res/drawable/bg_border.xml
+++ b/app/src/main/res/drawable/bg_border.xml
@@ -3,9 +3,9 @@
     <item>
         <shape android:shape="rectangle">
             <stroke
-                android:width="1dp"
-                android:color="#f5f5f5"/>
-            <solid android:color="#ffffff"/>
+                android:width="1px"
+                android:color="@color/colorLine"/>
+            <solid android:color="@color/bg_white"/>
         </shape>
     </item>
 </layer-list>
