--- a/app/src/main/res/drawable/left_round_btn.xml
+++ b/app/src/main/res/drawable/left_round_btn.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/bg_white" />
-    <corners android:topLeftRadius="5dp" android:bottomLeftRadius="5dp" />
-    <stroke android:width="1dp" android:color="@color/bg_gray" />
+    <corners android:topLeftRadius="1dp" android:bottomLeftRadius="1dp" />
+
+
+
+    <stroke android:width="1px" android:color="@color/colorLine" />
 </shape>
