--- a/app/src/main/res/drawable/right_round_edittext.xml
+++ b/app/src/main/res/drawable/right_round_edittext.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/bg_white" />
-    <corners android:topRightRadius="5dp" android:bottomRightRadius="5dp" />
-    <stroke android:width="1dp" android:color="@color/bg_gray" />
+    <corners android:topRightRadius="1dp" android:bottomRightRadius="1dp" />
+    <stroke android:width="1px" android:color="@color/colorLine" />
 </shape>
