--- a/app/src/main/res/drawable/text_btn_color.xml
+++ b/app/src/main/res/drawable/text_btn_color.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/colorPrimary" android:state_selected="true"/>
+    <item android:color="@color/colorPrimaryDark" android:state_selected="true"/>
+    <item android:color="@color/colorPrimaryDark" android:state_pressed="true"/>
+    <item android:color="@color/colorPrimaryDark" android:state_checked="true"/>
     <item android:color="@color/tv_name" android:state_selected="false"/>
+    <item android:color="@color/tv_name" android:state_pressed="false"/>
+    <item android:color="@color/tv_name" android:state_checked="false"/>
 </selector>
