--- a/app/src/main/res/layout/fragment_shopcar_item_good.xml
+++ b/app/src/main/res/layout/fragment_shopcar_item_good.xml
@@ -15,17 +15,20 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
         android:text="[促销]满19：00得赠品，赠完为止"
-        android:textSize="@dimen/tv_light"/>
+        android:textSize="@dimen/tv_light"
+        android:id="@+id/textView3"/>
 
 
     <CheckBox
         android:id="@+id/good_checkbox"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="56dp"
         android:background="@drawable/checkbox_selector"
-        android:button="@null"/>
+        android:button="@null"
+        android:layout_alignBaseline="@+id/tv_good_spec"
+        android:layout_alignBottom="@+id/tv_good_spec"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignStart="@+id/textView3"/>
 
     <LinearLayout
         android:id="@+id/ll_good_img"
@@ -79,9 +82,9 @@
         layout="@layout/view_add_and_minus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="90dp"/>
+        android:layout_below="@+id/tv_good_spec"
+        android:layout_alignRight="@+id/tv_good_name"
+        android:layout_alignEnd="@+id/tv_good_name"/>
 
 
 </RelativeLayout>
