--- a/app/src/main/res/layout/fragment_shopcart.xml
+++ b/app/src/main/res/layout/fragment_shopcart.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/rl_car_login_notice"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="35dp"
         android:background="@color/bg_white">
 
         <View
@@ -19,22 +19,22 @@
 
         <TextView
             android:id="@+id/tv_shopcar_login"
-            style="@style/NormalTextView"
+            style="@style/LightTextView"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="@string/shop_car_notice"
             android:textColor="@color/tv_hint"/>
 
         <Button
-            android:layout_width="48dp"
-            android:layout_height="22dp"
+            android:layout_width="45dp"
+            android:layout_height="20dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/tv_shopcar_login"
             android:background="@drawable/bg_flow_selected"
             android:text="登录"
             android:textColor="@color/bg_white"
-            android:textSize="@dimen/tv_Normal"/>
+            android:textSize="@dimen/tv_small"/>
 
     </RelativeLayout>
 
@@ -58,12 +58,12 @@
         android:layout_height="50dp"
         android:background="@color/bg_white"
         android:elevation="10dp"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <CheckBox
             android:id="@+id/good_checkbox"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_centerVertical="true"
             android:background="@drawable/checkbox_selector"
             android:button="@null"/>
@@ -71,9 +71,8 @@
         <RelativeLayout
             android:id="@+id/rl_shopcar_pay_layout"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
             android:visibility="visible">
 
 
@@ -86,15 +85,16 @@
             <TextView
                 android:id="@+id/all_price"
                 style="@style/LightTextView"
-                android:layout_marginLeft="6dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/bt_sell"
                 android:text="￥60556.00"
                 android:textColor="@color/tv_price"/>
 
             <TextView
                 style="@style/SmallHintTextView"
-                android:layout_below="@+id/all_price"
-                android:layout_marginRight="6dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/bt_sell"
                 android:text="不含运费"/>
 
@@ -102,11 +102,10 @@
                 android:id="@+id/bt_sell"
                 android:layout_width="90dp"
                 android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="6dp"
-                android:layout_marginRight="4dp"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorPrimaryDark"
                 android:text="去结算"
                 android:textColor="@color/bg_white"
                 android:textSize="@dimen/tv_light"/>
