--- a/app/src/main/res/layout/view_add_and_minus.xml
+++ b/app/src/main/res/layout/view_add_and_minus.xml
@@ -7,14 +7,14 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_border"
         android:gravity="center_vertical"
+
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnAppCommonMinus"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:background="@drawable/left_round_btn"
             android:text="—"
             android:textColor="@color/tv_name"
@@ -22,18 +22,18 @@
 
         <TextView
             android:id="@+id/tvAppCommonCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:background="@null"
-            android:textSize="@dimen/tv_light"
-            android:textColor="@color/tv_hint"/>
+            android:layout_width="25dp"
+            android:layout_height="20dp"
+            android:background="@drawable/bg_border"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/tv_hint"
+            android:textSize="@dimen/tv_light"/>
 
         <Button
             android:id="@+id/btnAppCommonAdd"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:background="@drawable/right_round_edittext"
             android:text="+"
             android:textColor="@color/tv_name"
