--- a/app/src/main/res/layout/activity_good_details.xml
+++ b/app/src/main/res/layout/activity_good_details.xml
@@ -160,6 +160,7 @@
             android:background="@color/bg_gray"/>
 
         <Button
+            android:id="@+id/bt_add_car"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
