--- a/app/src/main/res/layout/activity_searchgood_item_grid.xml
+++ b/app/src/main/res/layout/activity_searchgood_item_grid.xml
@@ -4,7 +4,9 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="1px"
+    android:layout_marginBottom="2px"
+    android:layout_marginLeft="1px"
+    android:layout_marginRight="1px"
     android:background="@color/bg_white"
     android:orientation="vertical">
 
@@ -40,16 +42,14 @@
         <TextView
             android:id="@+id/tv_goods_price"
             style="@style/GoodsPriceTextView"
-            android:layout_alignParentBottom="true"
-            />
+            android:layout_alignParentBottom="true" />
 
         <TextView
             android:id="@+id/tv_goods_sellnum"
             style="@style/SmallHintTextView"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="12dp"
-            android:layout_toRightOf="@+id/tv_goods_price"
-            />
+            android:layout_toRightOf="@+id/tv_goods_price" />
     </RelativeLayout>
 
 </LinearLayout>
