--- a/app/src/main/res/layout/activity_stores.xml
+++ b/app/src/main/res/layout/activity_stores.xml
@@ -2,8 +2,62 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
                                                  android:layout_width="match_parent"
-                                                 android:background="@color/bg_gray"
-                                                 android:layout_height="match_parent">
+                                                 android:layout_height="match_parent"
+                                                 android:background="@color/bg_gray">
+
+    <View
+        style="@style/XYLine"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="45dp"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_gravity="bottom"
+        android:background="@color/bg_white"
+        android:translationZ="10dp">
+
+        <TextView
+            android:id="@+id/tv_store_introduce"
+            android:layout_width="0.0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="店铺介绍"
+            android:textSize="@dimen/tv_Regular"/>
+
+        <View
+            android:layout_width="2px"
+            android:layout_height="18dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/colorLine"/>
+
+        <TextView
+            android:id="@+id/tv_store_voucher"
+            android:layout_width="0.0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="免费领券"
+            android:textSize="@dimen/tv_Regular"/>
+
+        <View
+            android:layout_width="2px"
+            android:layout_height="18dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/colorLine"/>
+
+
+        <TextView
+            android:id="@+id/tv_store_service"
+            android:layout_width="0.0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="联系客服"
+            android:textSize="@dimen/tv_Regular"/>
+    </LinearLayout>
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,7 +74,7 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="216dp"
+                android:layout_height="175dp"
                 android:background="@drawable/test_store_bg"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
@@ -31,13 +85,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginBottom="60.0dip"
-                android:paddingLeft="10.0dip">
+                android:padding="10dp">
 
 
                 <ImageView
-                    android:layout_width="40.0dip"
-                    android:layout_height="40.0dip"
+                    android:id="@+id/iv_store_logo"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:src="@drawable/test_good_store"/>
 
                 <View
@@ -49,9 +103,11 @@
                     android:background="@color/bg_white"/>
 
                 <TextView
+                    android:id="@+id/tv_store_name"
                     style="@style/LightTextView"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_marginRight="120dp"
+                    android:layout_toRightOf="@id/iv_store_logo"
                     android:text="梅子熟了 文艺复古清新女装"
                     android:textColor="@color/bg_white"/>
 
@@ -75,17 +131,23 @@
                     android:layout_height="22.0dip"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="10px"
                     android:background="@drawable/bg_flow_selected"
-                    android:text="关注"
-                    android:textColor="@color/bg_white"/>
+                    android:text="+关注"
+                    android:textColor="@color/bg_white"
+                    android:textSize="@dimen/tv_light"/>
+
+                <com.google.android.flexbox.FlexboxLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_store_name"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/iv_store_logo"/>
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/store_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:layout_marginBottom="35dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
@@ -126,7 +188,7 @@
                             android:textColorHint="@color/tv_hint"
                             android:textSize="@dimen/tv_Normal"/>
 
-                        <ImageView
+                        <ImageButton
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:background="@drawable/btn_bg_gray"
@@ -160,84 +222,39 @@
             </android.support.v7.widget.Toolbar>
 
 
-            <com.flyco.tablayout.SlidingTabLayout
-                android:id="@+id/store__tabs"
-                android:layout_width="match_parent"
-                android:layout_height="41.0dip"
-                android:layout_gravity="bottom"
-                android:background="@color/bg_white"
-                app:tl_divider_color="@color/colorLine"
-                app:tl_divider_padding="10.0dip"
-                app:tl_divider_width="1px"
-                app:tl_indicator_color="@color/colorPrimaryDark"
-                app:tl_indicator_width_equal_title="true"
-                app:tl_tab_space_equal="true"
-                app:tl_textSelectColor="@color/colorPrimaryDark"
-                app:tl_textUnselectColor="@color/tv_name"
-                app:tl_textsize="@dimen/tv_Regular"
-                app:tl_indicator_height="4dp"
-                app:tl_underline_gravity="BOTTOM"/>
-
-
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/store__tabs"
-        android:background="@color/bg_gray"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45.0dip"
-        android:layout_gravity="bottom"
-        android:background="@color/bg_white"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        android:translationZ="10dp">
+        <com.flyco.tablayout.SlidingTabLayout
+            android:id="@+id/store__tabs"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_gravity="bottom"
+            android:background="@color/bg_white"
+            app:tl_divider_color="@color/colorLine"
+            app:tl_divider_padding="10.0dip"
+            app:tl_divider_width="1px"
+            app:tl_indicator_color="@color/colorPrimaryDark"
+            app:tl_indicator_height="4dp"
+            app:tl_indicator_width_equal_title="true"
+            app:tl_tab_space_equal="true"
+            app:tl_textSelectColor="@color/colorPrimaryDark"
+            app:tl_textUnselectColor="@color/tv_name"
+            app:tl_textsize="@dimen/tv_Regular"
+            app:tl_underline_gravity="BOTTOM"/>
 
-        <TextView
-            android:id="@+id/tv_store_introduce"
-            android:layout_width="0.0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="店铺介绍"
-            android:textSize="@dimen/tv_Regular"/>
-
-        <View
-            android:layout_width="1px"
-            android:layout_height="18dp"
-            android:layout_gravity="center_vertical"
-            android:background="@color/colorLine"/>
-
-        <TextView
-            android:id="@+id/tv_store_voucher"
-            android:layout_width="0.0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="免费领券"
-            android:textSize="@dimen/tv_Regular"/>
-
-        <View
-            android:layout_width="1px"
-            android:layout_height="18dp"
-            android:layout_gravity="center_vertical"
-            android:background="@color/colorLine"/>
-
-
-        <TextView
-            android:id="@+id/tv_store_service"
-            android:layout_width="0.0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="联系客服"
-            android:textSize="@dimen/tv_Regular"/>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/bg_gray"/>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
