--- a/app/src/main/res/layout/fragment_group_buy_goods.xml
+++ b/app/src/main/res/layout/fragment_group_buy_goods.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_store_home"
+        android:id="@+id/rv_group"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_gray"/>
-
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
