--- a/app/src/main/res/layout/fragment_home_top.xml
+++ b/app/src/main/res/layout/fragment_home_top.xml
@@ -17,6 +17,7 @@
             app:indicator_drawable_selected="@drawable/banner_shape"
             app:indicator_height="8dp"
             app:indicator_margin="6dp"
+            app:image_scale_type="fit_xy"
             app:indicator_width="8dp"/>
 
         <android.support.v7.widget.RecyclerView
