--- a/app/src/main/res/layout/fragment_order_item.xml
+++ b/app/src/main/res/layout/fragment_order_item.xml
@@ -19,13 +19,16 @@
             android:id="@+id/bt_order_item_store"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_centerVertical="true"
             android:background="@null"
             android:drawableLeft="@drawable/ic_store"
             android:drawablePadding="10dp"
             android:drawableRight="@drawable/ic_right_row"
             android:text=""
-            android:textColor="@color/tv_name"/>
+            android:textSize="@dimen/tv_light"
+            android:textColor="@color/tv_name"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
         <TextView
             android:id="@+id/tv_order_item_status"
