--- a/app/src/main/res/layout/fragment_store_sell.xml
+++ b/app/src/main/res/layout/fragment_store_sell.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="220dp"
+              android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:padding="10dp">
 
     <RelativeLayout
         android:id="@+id/iv_store_co_1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginRight="4dp"
+        android:layout_width="125dp"
+        android:layout_height="195dp"
         android:layout_weight="1">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="125dp"
+            android:layout_height="195dp"
             android:background="@drawable/test_store_home_1"/>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="125dp"
             android:layout_height="25dp"
             android:layout_alignParentBottom="true"
             android:background="@color/colorTransparency_B"
@@ -30,29 +29,29 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="4dp"
+        android:layout_width="212dp"
+        android:layout_height="195dp"
+        android:layout_marginLeft="10dp"
         android:layout_weight="2"
         android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/iv_store_co_2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="212dp"
+            android:layout_height="90dp"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="4dp"
             android:layout_weight="1">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="212dp"
+                android:layout_height="90dp"
                 android:background="@drawable/store_home_2"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
-                android:layout_alignParentBottom="true"
+                android:layout_marginTop="65dp"
                 android:background="@color/colorTransparency_B"
                 android:gravity="center"
                 android:text="已售：2563"
@@ -63,31 +62,27 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="4dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
             <RelativeLayout
                 android:id="@+id/iv_store_co_3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="4dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_weight="1">
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:background="@drawable/store_home_3"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"/>
+                    android:scaleType="fitXY"/>
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="100dp"
                     android:layout_height="25dp"
-                    android:layout_alignParentBottom="true"
+                    android:layout_marginTop="75dp"
                     android:background="@color/colorTransparency_B"
                     android:gravity="center"
                     android:text="已售：2563"
@@ -99,23 +94,22 @@
 
             <RelativeLayout
                 android:id="@+id/iv_store_co_4"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="10dp"
                 android:layout_weight="1">
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="4dp"
+                    android:layout_centerHorizontal="true"
                     android:background="@drawable/home_store_4"/>
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="100dp"
                     android:layout_height="25dp"
-                    android:layout_alignParentBottom="true"
+                    android:layout_marginTop="75dp"
                     android:background="@color/colorTransparency_B"
                     android:gravity="center"
                     android:text="已售：2563"
