--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -92,7 +92,7 @@
 
 
     <style name="GoodsNameTextView">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/tv_Normal</item>
         <item name="android:textColor">@color/tv_name</item>
