--- a/app/src/main/res/layout/fragment_good_comment.xml
+++ b/app/src/main/res/layout/fragment_good_comment.xml
@@ -6,14 +6,17 @@
               android:orientation="vertical">
     <!--底部区域-->
     <include layout="@layout/fragment_good_eva_tab"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2px"
         android:background="@color/colorLine"/>
 
-   <android.support.v7.widget.RecyclerView
-       android:id="@+id/rv_comment"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"/>
+    <FrameLayout
+        android:id="@+id/good_eva_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        android:background="@color/bg_gray"/>
 
 </LinearLayout>
