--- a/app/src/main/res/layout/activity_credit_mall.xml
+++ b/app/src/main/res/layout/activity_credit_mall.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:background="@color/bg_gray"
-              android:layout_height="match_parent">
+              android:orientation="vertical">
 
-    <include layout="@layout/activity_msg_header"/>
+    <include layout="@layout/activity_credit_mall_header"/>
 
     <View
         style="@style/XYLine"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_credit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"/>
+        android:layout_height="match_parent"/>
 
 
 </LinearLayout>
