--- a/app/src/main/res/layout/activity_searchgood_item_grid.xml
+++ b/app/src/main/res/layout/activity_searchgood_item_grid.xml
@@ -12,7 +12,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp">
+        android:layout_height="180dp"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/ivGoodPic"
@@ -27,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="75dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="@color/bg_white"
         android:paddingBottom="5dp">
 
