--- a/app/src/main/res/layout/view_select_layout.xml
+++ b/app/src/main/res/layout/view_select_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical">
 
     <LinearLayout
@@ -100,12 +100,5 @@
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="@color/colorLine"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_group"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
     </LinearLayout>
-
-
 </LinearLayout>
